third_party/move/move-compiler-v2/tests/checking/naming/unused_type_parameter_struct_invalid_fields.move
module 0x42::test {
    struct ListGood<T> {
        head: T,
        tail: ListGood<T>,
    }

    struct ListBad<T, U> {
        head: T,
        tail: ListBad<T, U>,
    }

    struct BadFields<T, U> {
        f: (T, bool),
        g: &T,
    }
}
